Inverted lightbox controls colors

--- a/public/parts/chats.html
+++ b/public/parts/chats.html
@@ -29,6 +29,8 @@
                 $('.lightbox').css('display','flex');
                 $('.lightbox').animate({opacity : 1},200);
                 $('.lightbox_container').show();
+                $('.lightbox_icon').show();
+			    $('.lightbox_icon').show();
         };
 
         
