--- a/public/parts/chats.html
+++ b/public/parts/chats.html
@@ -1,6 +1,6 @@
-<div data-scope="chats">
-    <div  data-bind="?.chats__template">
-        <script type="text/html">
+<div style="width: 100%;" data-scope="chats">
+    <div style="width: 100%;"  data-bind="?.chats__template">
+        <script  type="text/html">
             {{ foreach chat in value }}
             <div data-id="{{ chat.id }}" class="single_chat">
                 <div class="image_container exec" data-exec="?/lightbox">
@@ -21,6 +21,7 @@
     PLUGIN('chats', function(exports) {
         // You can define your custom functions or properties
       exports.lightbox  = function (e) {
+                $('.lightbox_icon').removeClass('hidden');
                 console.log($(e));
                 var image = $(e).children('img').attr('src');
                 var name = $(e).parent().find('.user_name name').text(); 
@@ -29,8 +30,7 @@
                 $('.lightbox').css('display','flex');
                 $('.lightbox').animate({opacity : 1},200);
                 $('.lightbox_container').show();
-                $('.lightbox_icon').show();
-			    $('.lightbox_icon').show();
+              
         };
 
         
