--- a/public/parts/scanner.html
+++ b/public/parts/scanner.html
@@ -1,4 +1,4 @@
-<div style="width: 100%;" data-scope="camera">
+<div style="width: 100%;" data-scope="scanner">
         <div class="camera_zone" style="width: 100%; height:100%; background-color:black;" >
             
    
@@ -87,7 +87,7 @@
         //    opt.visibleX = true;
         //    SCROLLBAR(gallery,opt);
 
-    PLUGIN('camera', function(exports) {
+    PLUGIN('scanner', function(exports) {
         // You can define your custom functions or properties
         //<video autoplay muted width="100vw" height="90vh" style="width: 100vw!important; height: 90vh!important;; border : 1px solid red;"  id="video"></video>
         exports.reload = function() {
